src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__pointer_binary_expression_adding_two_pointers.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: msg
---
error[E071]: '+' operation must contain one int type
  ┌─ <internal>:8:16
  │
8 │         ptr := ptr + ptr;
  │                ^^^^^^^^^ '+' operation must contain one int type
